[package]
name = 'grandine'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
allocator = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
database = { workspace = true }
deposit_tree = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
directories = { workspace = true }
doppelganger_protection = { workspace = true }
eip_2335 = { workspace = true }
enum-iterator = { workspace = true }
eth1 = { workspace = true }
eth1_api = { workspace = true }
eth2_libp2p = { workspace = true }
features = { workspace = true }
fork_choice_control = { workspace = true }
fork_choice_store = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
genesis = { workspace = true }
glob = { workspace = true }
grandine_version = { workspace = true }
hex-literal = { workspace = true }
http_api = { workspace = true }
http_api_utils = { workspace = true }
itertools = { workspace = true }
libmdbx = { workspace = true }
keymanager = { workspace = true }
log = { workspace = true }
runtime = { workspace = true }

[dev-dependencies]
dirs = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }

[features]
logger-always-write-style = ['runtime/logger-always-write-style']

# `preset-any` and `network-any` should not be passed to Cargo.
# They only exist to avoid duplicating lists of features.
preset-any = []

preset-mainnet = ['preset-any', 'runtime/preset-mainnet']
preset-minimal = ['preset-any', 'runtime/preset-minimal']

network-any = []

network-goerli = [
    'network-any', 
    'preset-mainnet',
    'runtime/network-goerli'
]
network-mainnet = [
    'network-any', 
    'preset-mainnet',
    'runtime/network-mainnet'
]
network-sepolia = [
    'network-any', 
    'preset-mainnet',
    'runtime/network-sepolia'
]
network-shadow = [
    'network-any', 
    'preset-mainnet',
    'runtime/network-shadow'
]
network-holesky = [
    'network-any', 
    'preset-mainnet',
    'runtime/network-holesky'
]

default-networks = [
    'network-mainnet',
    'network-sepolia',
    'network-shadow',
    'network-holesky',
]
